<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E0E0E0"
    android:layout_margin="10dp"
    tools:context="com.example.calculator.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textSize="25sp"
        >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear"
        android:clickable="true"
        android:id="@+id/clear"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:id="@+id/equal"
        android:clickable="true"
        android:enabled="false"
        android:background="@drawable/operator_button_shape"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Use"
        android:id="@+id/ans"
        android:clickable="true"
        android:enabled="false"
        android:background="@drawable/operator_button_shape"
        />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text=""
            android:textAlignment="center"
            android:hint="Stored Value"
            android:id="@+id/value"
            android:background="@drawable/cart"
            />
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30sp"
        android:id="@+id/input"
        android:inputType="textMultiLine"
        android:ems="10"
        android:lines="3"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:singleLine="false"
        android:textAlignment="viewEnd"
        android:layout_gravity="end"
        android:textStyle="bold"
        android:textIsSelectable="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="30sp"
        android:id="@+id/result"
        android:inputType="text"

        android:textAlignment="viewEnd"
        android:layout_gravity="end"
        android:textStyle="bold"
        android:textIsSelectable="true"
        />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp"
    android:textSize="25sp"
    android:layout_gravity="bottom"
    android:gravity="bottom"


    >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:id="@+id/one"
        android:clickable="true"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:id="@+id/two"
        android:layout_toRightOf="@+id/one"
        android:layout_toEndOf="@+id/one"
        android:clickable="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:id="@+id/three"
        android:layout_toRightOf="@+id/two"
        android:layout_toEndOf="@+id/two"
        android:clickable="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:id="@+id/plus"
        android:layout_toRightOf="@+id/three"
        android:layout_toEndOf="@+id/three"
        android:clickable="true"
        android:enabled="false"
        android:background="@drawable/operator_button_shape"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:id="@+id/four"
        android:layout_below="@+id/one"
        android:clickable="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:id="@+id/five"
        android:layout_toRightOf="@+id/four"
        android:layout_toEndOf="@+id/four"
        android:layout_below="@+id/two"
        android:clickable="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:id="@+id/six"
        android:layout_toRightOf="@+id/five"
        android:layout_toEndOf="@+id/five"
        android:layout_below="@+id/three"
        android:clickable="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:id="@+id/minus"
        android:layout_toRightOf="@+id/six"
        android:layout_toEndOf="@+id/six"
        android:layout_below="@+id/plus"
        android:clickable="true"
        android:background="@drawable/operator_button_shape"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:id="@+id/seven"
        android:layout_below="@+id/four"
        android:clickable="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:id="@+id/eight"
        android:layout_toRightOf="@+id/seven"
        android:layout_toEndOf="@+id/seven"
        android:layout_below="@+id/five"
        android:clickable="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:id="@+id/nine"
        android:layout_toRightOf="@+id/eight"
        android:layout_toEndOf="@+id/eight"
        android:layout_below="@+id/six"
        android:clickable="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:id="@+id/multiply"
        android:layout_toRightOf="@+id/nine"
        android:layout_toEndOf="@+id/nine"
        android:layout_below="@+id/minus"
        android:clickable="true"
        android:enabled="false"
        android:background="@drawable/operator_button_shape"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:id="@+id/dot"
        android:layout_below="@+id/seven"
        android:enabled="false"
        android:clickable="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/zero"
        android:layout_toRightOf="@+id/dot"
        android:layout_toEndOf="@+id/dot"
        android:layout_below="@+id/eight"
        android:clickable="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back"
        android:layout_toRightOf="@+id/zero"
        android:layout_toEndOf="@+id/zero"
        android:layout_below="@+id/nine"
        android:clickable="true"
        android:enabled="false"
        android:background="@drawable/operator_button_shape"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:id="@+id/divide"
        android:layout_toRightOf="@+id/back"
        android:layout_toEndOf="@+id/back"
        android:layout_below="@+id/multiply"
        android:clickable="true"
        android:enabled="false"
        android:background="@drawable/operator_button_shape"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearAll"
        android:id="@+id/clearAll"
        android:layout_below="@+id/dot"
        android:clickable="true"
        android:enabled="false"
        android:background="@drawable/operator_button_shape"
 />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="^"
        android:id="@+id/power"
        android:layout_below="@+id/zero"
        android:layout_toRightOf="@+id/clearAll"
        android:layout_toEndOf="@+id/clearAll"
        android:clickable="true"
        android:enabled="false"
        android:background="@drawable/operator_button_shape"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:id="@+id/left"
        android:layout_below="@+id/back"
        android:layout_toRightOf="@+id/power"
        android:layout_toEndOf="@+id/power"
        android:clickable="true"
        android:background="@drawable/operator_button_shape"
        android:enabled="false"
      />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        android:id="@+id/right"
        android:clickable="true"
        android:background="@drawable/operator_button_shape"
        android:layout_below="@+id/dot"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/left"
        android:layout_toEndOf="@+id/left"
        android:enabled="false"
        />

</RelativeLayout>


</LinearLayout>
